scss synax support in css file config

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>这是一个用于PostCSS测试的页面</title>
+  <link href="../dist/index.css" rel="stylesheet">
 </head>
 <body>
   <div class="test">
-    <p class="multiline">this is a container</p>
+    <p class="box">this is a box</p>
+    <p class="box">this is another box</p>
   </div>
-  <script src="../dist/index.js"></script>
 </body>
 </html>
